implemented the item drop function